깃 코기환경설정

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>킷 활용하기가닝러ㅏㅣㄴㅇ</title>
 </head>
 <body>
-    
+    <h1>
+        깃명령어
+    </h1>
+    <h2> 깃 초기설정</h2>
+    <pre>
+        초기환경설정코드 삽입하기
+    </pre>
 </body>
 </html>
