깃 관련활용 커밋관련 명령어

--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
 
     <h2>깃 초기화</h2>
     <pre>git  init </pre>
+
+    <h2> 상태 확인하기</h2>
+    <pre> git status </pre>
+
+    <h2> 커밋 대기열로 보내기</h2>
+    <pre> git add</pre>
+
+    <h2> 깃 커밋하기 </h2>
+    <pre> git commit </pre>
 </body>
 </html>
